--- a/module5/case/CaseStudyFurama/src/app/app.component.html
+++ b/module5/case/CaseStudyFurama/src/app/app.component.html
@@ -9,7 +9,10 @@
     </ul>
   </aside>
   <section>
-<app-service></app-service>
+<!--<app-service></app-service>-->
+<!--    <app-customer></app-customer>-->
+<!--    <app-edit-customer></app-edit-customer>-->
+  <!--    <app-create-customer></app-create-customer>-->
   </section>
 </main>
 <app-footer></app-footer>
