--- a/module5/angular-product/src/app/product/product-update/product-update.component.html
+++ b/module5/angular-product/src/app/product/product-update/product-update.component.html
@@ -1,10 +1,10 @@
 <h1>Cập nhật thông tin sản phẩm</h1>
-<a routerLink="/product/list">Quay Lại Trang Danh Sách</a>
+<!--<a routerLink="/product/list">Quay Lại Trang Danh Sách</a>-->
 <form [formGroup]="productForm" (ngSubmit)="updateProduct(id)">
   <table>
     <tr>
       <td>Tên sản phẩm:</td>
-      <td><input type="text" formControlName="nameProduct"></td>
+      <td><input type="text" formControlName="name"></td>
     </tr>
     <tr>
       <td>Giá sản phẩm</td>
