--- a/module5/angular-product/src/app/product/product-list/product-list.component.html
+++ b/module5/angular-product/src/app/product/product-list/product-list.component.html
@@ -1,30 +1,82 @@
 <h1>Danh sách sản phẩm</h1>
-<table>
+<a style="text-align: center" routerLink="/products/create" class="btn btn-primary"><i class="fa-solid fa-circle-info" style="color: #145ddb;"></i>Thêm mới</a>
+<!--Search da truong hoac 1 truong thuoc tinh-->
+<!--<div style="text-align: center">-->
+<!--  <input #inputSearch-->
+<!--         type="text" placeholder="Tìm Kiếm">-->
+<!--  <button (click)="search(inputSearch)">Search</button>-->
+<!--</div>-->
+<div style="text-align: center">
+  <input #inputName type="text" placeholder="Input name" >
+  <input #inputPrice type="text" placeholder="Input price" >
+  <button (click)="search1(inputName, inputPrice)">Search</button>
+</div>
+<table style="margin: 0 auto" class="table table-striped table-hover ">
   <tr>
     <td>STT</td>
+    <td>Id</td>
     <td>Tên</td>
     <td>Giá</td>
     <td>Mô tả</td>
+    <td>Danh Muc</td>
     <td>Update</td>
     <td>Delete</td>
   </tr>
-  <tr *ngFor="let product of products; index as i">
+  <tr *ngFor="let product of products| paginate: { itemsPerPage: 5, currentPage: p }; index as i ">
     <td>{{i + 1}}</td>
+    <td>{{product.id}}</td>
     <td>{{product.name}}</td>
     <td>{{product.price}}</td>
     <td>{{product.description}}</td>
+    <td>{{product.category.name}}</td>
     <td><a [routerLink]="['/product/update',product.id]">
-      <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+      <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil-square"
+           viewBox="0 0 16 16">
+        <path
+          d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+        <path fill-rule="evenodd"
+              d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
       </svg>
     </a></td>
-    <td><a routerLink="/product/delete/{{product.id}}">
-      <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
-        <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
-      </svg>
+    <td><a class=" btn btn-primary" data-toggle="modal" data-target="#delete" (click)=getProduct(product.id)  style="background: none"><i class="fa-solid fa-trash" style="color: #d41616;"></i>
+
+<!--    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-trash3-fill"-->
+<!--           viewBox="0 0 16 16">-->
+<!--        <path-->
+<!--          d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>-->
+<!--      </svg>-->
     </a></td>
   </tr>
 
 </table>
+<pagination-controls (pageChange)="p = $event" previousLabel="Trước"
+                     nextLabel="Sau" style="text-align: center"></pagination-controls>
 
+
+<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content" style="background-color: #FFFFFF">
+      <div class="modal-header">
+        <h4 class="modal-title text-danger" id="modelTitleId">Thông báo: Xóa khách hàng</h4>
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+          <i class="fa-brands fa-xbox" style="color: #FF0000;"></i>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p class="delete-p">Bạn có chắc chắn muốn xóa khách hàng này không?</p>
+        <ul>
+          <li>Mã Sổ Số: {{ product?.id }}</li>
+        </ul>
+        <ul>
+          <li>Tên khách hàng: {{product?.name}}</li>
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button (click)="removeProduct(product?.id)" data-dismiss="modal" type="button" class="btn btn-primary">
+          Delete
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
