--- a/module5/angular-product/src/app/category/category-create/category-create.component.html
+++ b/module5/angular-product/src/app/category/category-create/category-create.component.html
@@ -1,10 +1,10 @@
 <h1>Tạo danh mục mới</h1>
 <form [formGroup]="categoryForm" (ngSubmit)="submit()">
   <table>
-    <tr>
-      <td>Mã danh mục:</td>
-      <td><input type="number" formControlName="id"></td>
-    </tr>
+<!--    <tr>-->
+<!--      <td>Mã danh mục:</td>-->
+<!--      <td><input type="number" formControlName="id"></td>-->
+<!--    </tr>-->
     <tr>
       <td>Tên danh mục:</td>
       <td><input type="text" formControlName="name"></td>
