--- a/module5/angular-product/src/app/shared/nav-bar/nav-bar.component.html
+++ b/module5/angular-product/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,1 +1,18 @@
-<a routerLink="/product/list">Danh sách sản phẩm</a> | <a routerLink="/category/list">Danh sách danh mục sản phẩm</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a routerLink="/product/list">Danh sách sản phẩm</a></li>
+        <li class="breadcrumb-item"><a routerLink="/category/list">Danh sách danh mục sản phẩm</a></li>
+
+      </ol>
+    </nav>
+  </div>
+</nav>
+
+
+
+
+
+
+<!--<a routerLink="/product/list">Danh sách sản phẩm</a> | <a routerLink="/category/list">Danh sách danh mục sản phẩm</a>-->
